# lanterns

./: .gitignore  Cargo.toml  README.md
assets/: lanterns.drawio
src/: lib.rs  main.rs
src/gui/: application.rs  mod.rs  router.rs  screens.rs  state.rs  store.rs
src/gui/modules/: connection.rs  info.rs  loading.rs  message.rs  mod.rs  welcome.rs
src/gui/screen/: call.rs  communicate.rs  connection.rs  dashboard.rs  mod.rs
src/io/: mod.rs
src/io/adapters/: bluetooth.rs  mod.rs
src/util/: mod.rs
