[package]
name = "lanterns"
version = "0.1.0"
authors = ["Gregory Langlais <general@gregorylanglais.com>"]
edition = "2018"
description = "Private Communications No Holds Barred"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.18.2"
tui = { version = "0.13.0", default-features = false, features = ['crossterm'] }
blurz = "0.4.0"
rand = "0.7"